<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="name">name</string>
    <string name="start">Start</string>
    <string name="what_country_does_this_flag_belong_to">What country does this flag belong to ?</string>
    <string name="_1_9">1/9</string>
    <string name="submit">Submit</string>
</resources>