<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/quiz_app"
        android:layout_marginBottom="20dp"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:padding="10dp"
        app:cardCornerRadius="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/greeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/practiceInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="15dp"
                android:gravity="center"
                android:text="@string/please_enter_your_name"
                android:textSize="18sp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    >
                </androidx.appcompat.widget.AppCompatEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/start"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginVertical="15dp"
                android:backgroundTint="@color/design_default_color_primary"
                />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>